--- a/index.html
+++ b/index.html
@@ -25,6 +25,28 @@
     />
   </head>
   <body>
+    <header>
+      <a href="#" class="logo">
+        <img src="img/logo.webp" alt="Logo" />
+        <span class="logo_pink">T</span>u
+        <span class="logo_pink">I</span>magen</a
+      >
+      <ul class="navbar">
+        <li>
+          <a href="#"> Inicio </a>
+          <a href="#"> Servicios </a>
+          <a href="#"> Sobre Nosotros </a>
+          <a href="#"> Contacto </a>
+        </li>
+      </ul>
+      <div class="h-right">
+        <a href="#">Seguinos</a>
+        <a href="#"><i class="ri-instagram-fill"></i></a>
+        <a href="#"><i class="ri-facebook-fill"></i></a>
+        <a href="#"><i class="ri-tiktok-fill"></i></a>
+        <div class="bx bx-menu" id="menu-icon"></div>
+      </div>
+    </header>
     <!--Inicio, Servicios, Sobre Nosotros, Contacto-->
 
     <!-- Custom js file link -->
