Navbar hover styling, menu button hidden

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     />
   </head>
   <body>
+    <!-- HEADER SECTION -->
     <header>
       <a href="#" class="logo">
         <img src="img/logo.webp" alt="Logo" />
@@ -47,7 +48,7 @@
         <div class="bx bx-menu" id="menu-icon"></div>
       </div>
     </header>
-    <!--Inicio, Servicios, Sobre Nosotros, Contacto-->
+    <!-- HOME SECTION -->
 
     <!-- Custom js file link -->
     <script src="js/main.js"></script>
