--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- HEADER SECTION -->
     <header>
       <a href="#" class="logo">
-        <img src="img/logo.webp" alt="Logo" />
+        <img src="img/logo.png" alt="Logo" />
         <span class="logo_pink">T</span>u
         <span class="logo_pink">I</span>magen</a
       >
@@ -49,7 +49,23 @@
       </div>
     </header>
     <!-- HOME SECTION -->
-
+    <section class="home">
+      <div class="home-text">
+        <h5>Vamos,</h5>
+        <h1>
+          Hagamos de tu evento <br />
+          un día inolvidable
+        </h1>
+        <p>
+          ¿Estás organizando un casamiento, cumpleaños de 15 o evento infantil?
+          <br />Tenemos todo lo que necesitas: Decoración, iluminación,
+          mobiliario, candy bar, DJ y mucho más. <br />Contratando nuestro
+          paquete completo, ¡te regalamos el salón! <br />Además, ofrecemos
+          planes de pago para que tu evento sea tal como lo soñaste.
+        </p>
+        <a href="#" class="btn">Comencemos</a>
+      </div>
+    </section>
     <!-- Custom js file link -->
     <script src="js/main.js"></script>
   </body>
