Finished below-hero section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,40 @@
         <a href="#" class="btn">Comencemos</a>
       </div>
     </section>
+
+    <!-- Feature Section -->
+    <section class="feature">
+      <div class="feature-content">
+        <div class="row">
+          <div class="row-img">
+            <img src="img/casamiento.jpeg" alt="Pareja en casamiento" />
+          </div>
+          <h4>Casamientos</h4>
+        </div>
+
+        <div class="row">
+          <div class="row-img">
+            <img src="img/quinceañera.webp" alt="Cumpleañera de 15" />
+          </div>
+          <h4>Cumpleaños de XV</h4>
+        </div>
+
+        <div class="row">
+          <div class="row-img">
+            <img src="img/infantil.jpg" alt="Niños de fiesta" />
+          </div>
+          <h4>Fiestas infantiles</h4>
+        </div>
+
+        <div class="row">
+          <div class="row-img">
+            <img src="img/sesion.webp" alt="Sesión fotográfica" />
+          </div>
+          <h4>Sesiones de fotos</h4>
+        </div>
+      </div>
+    </section>
+
     <!-- Custom js file link -->
     <script src="js/main.js"></script>
   </body>
