Event Section finished

--- a/index.html
+++ b/index.html
@@ -99,7 +99,24 @@
         </div>
       </div>
     </section>
-
+    <!-- Holiday section design -->
+    <section class="events">
+      <div class="events-img">
+        <img src="img/casamiento.jpeg" />
+      </div>
+      <div class="events-text">
+        <h5>Eventos</h5>
+        <h2>¿Quedaste a cargo de la organización?</h2>
+        <p>
+          En Tu Imagen contamos con un equipo de profesionales que llevan más de
+          10 años realizando eventos en los alrededores de Entre Rios con
+          presupuestos y paquetes accesibles para todas las familias, parejas o
+          amigos que anhelan pasar una noche inolvidable en ese día tan
+          especial.
+        </p>
+        <a href="#" class="btn">Leer más</a>
+      </div>
+    </section>
     <!-- Custom js file link -->
     <script src="js/main.js"></script>
   </body>
